[project]
name = "ml-spine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,classic-control]>=1.3.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "numpy>=2.4.6",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "trackio>=0.27.0",
]
